# TuringMachine

./: CMakeLists.txt  README.md  StrokeInput.h  TuringsMachine_en_VG.ts  actionparser.cpp  actionparser.h  alphabetbar.cpp  alphabetbar.h  alphabetinputwindow.cpp  alphabetinputwindow.h  alphabetlineedit.cpp  alphabetlineedit.h  application.qrc  carriagemodel.cpp  carriagemodel.h  charedit.cpp  charedit.h  footerpanel.cpp  footerpanel.h  inputtape.cpp  inputtape.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  statetable.cpp  statetable.h  strokeinput.cpp  toolbox.cpp  toolbox.h  warningform.cpp  warningform.h
